SEO AND ICON FIX

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Roast My Code" />
     
     <!-- SEO Keywords -->
-    <meta name="keywords" content="roast my code, code roast, code review, AI code reviewer, Hinglish coding, learn programming hindi, JavaScript tutorial hindi, Python bugs fix, coding mistakes, desi developer, programming humor, code analyzer, debugging tool free, coding practice india, interview preparation coding, DSA practice hindi, beginner coding india, code improvement, funny code review, brutal code review, code roaster online, free code review tool, AI programming assistant, learn coding funny way, coding memes, developer roast, programming jokes hindi, roast javascript code, roast python code, ai code review tool" />
+   <meta name="keywords" content="roast my code, AI code roaster, fix my shitty code, why is my code not working, clean my code ai, programming humor tool, code critique in hindi, Hinglish coding, desi developer, code review, AI code reviewer, learn programming hindi, JavaScript tutorial hindi, Python bugs fix, coding mistakes, code analyzer, debugging tool free, coding practice india, DSA practice hindi, code improvement, funny code review, brutal code review, free code review tool, AI programming assistant, coding memes, programming jokes hindi" />
     
     <!-- Robots -->
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
