add textrnal faveicon

--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
     <meta name="msapplication-TileColor" content="#f97316" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/public/pwa-192x192.png" />
-    <link rel="shortcut icon" href="/public/pwa-192x192.png" />
-    <link rel="apple-touch-icon" href="/public/pwa-192x192.png" />
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1006/1006124.png" />
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/1006/1006124.png" />
     <!-- PWA Meta Tags -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
