add favicon img

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <meta name="msapplication-TileColor" content="#f97316" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1006/1006124.png" />
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/1006/1006124.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
     <!-- PWA Meta Tags -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
